--- a/doc/secciones/04_analisis.tex
+++ b/doc/secciones/04_analisis.tex
@@ -307,7 +307,7 @@ Para mantener la calidad del código, se emplea análisis estático (\emph{linti
 errores y malas prácticas, y formateo automático que garantiza un estilo consistente conforme a 
 \href{https://peps.python.org/pep-0008/}{PEP 8}, mejorando legibilidad y mantenibilidad.
 
-La herramientas consideradas han sido:
+Las herramientas consideradas han sido:
 
 \begin{itemize}
   \item \textbf{Ruff}: muy rápido; reimplementa reglas habituales de \texttt{pyflakes}/\texttt{pycodestyle}
