--- a/doc/secciones/05_implementacion.tex
+++ b/doc/secciones/05_implementacion.tex
@@ -166,8 +166,12 @@ verde: un catálogo pequeño en memoria y la función listar(). Con eso ya está
 siguiente paso: filtrar la búsqueda por el esmalte del campo.
 
 \subsection{Búsqueda por esmalte del campo}
-Para implementar la búsqueda por el esmalte del campo, primero escribí las pruebas que debía superar
-la función. Estas pruebas cubren los criterios de aceptación definidos:
+Para satisfacer la necesidad de identificar y filtrar rápidamente escudos a partir de un rasgo visual
+inmediato, se implementa la búsqueda por esmalte del campo. Esta funcionalidad cubre lo definido en la
+\hyperref[sec:hu1]{HU1}: permite localizar los escudos cuyo campo presenta un esmalte determinado.
+
+Siguiendo la metodología TDD, primero escribí las pruebas unitarias que definen los criterios de
+aceptación de esta funcionalidad:
 
 \begin{itemize}
     \item Dado un esmalte canónico, la consulta devuelve únicamente escudos con ese campo.
