--- a/doc/secciones/05_implementacion.tex
+++ b/doc/secciones/05_implementacion.tex
@@ -74,7 +74,7 @@ proyecto se ha definido el siguiente lenguaje ubicuo:
         \centering
         \includegraphics[width=0.7\textwidth]{figuras/esmaltes-canonicos.png}
         \caption{Esmaltes heráldicos canónicos \cite{esmaltes_wikipedia}.}
-        \label{fig:esmaltes-canonicos}
+        \label{fig:esmaltes}
     \end{figure}
     \item \textbf{Pieza heráldica}: Son elementos de distinto esmalte al del campo que suelen tocar
     los bordes del escudo.
@@ -180,7 +180,7 @@ Siguiendo la metodología TDD, primero escribí las pruebas unitarias que define
 aceptación de esta funcionalidad:
 
 \begin{itemize}
-    \item Dado un \hyperref[fig:esmaltes-canonicos]{esmalte canónico}, la consulta devuelve únicamente escudos con ese campo.
+    \item Dado un \hyperref[fig:esmaltes]{esmalte canónico}, la consulta devuelve únicamente escudos con ese campo.
     \item Sin criterio, se devuelve el catálogo completo.
     \item Con un criterio no canónico, la respuesta es una lista vacía.
 \end{itemize}
