Especifica que esta función resolverá #12

--- a/doc/secciones/05_implementacion.tex
+++ b/doc/secciones/05_implementacion.tex
@@ -174,7 +174,8 @@ siguiente paso: filtrar la búsqueda por el esmalte del campo.
 \subsection{Búsqueda por esmalte del campo}
 Para satisfacer la necesidad de identificar y filtrar rápidamente escudos a partir de un rasgo visual
 inmediato, se implementa la búsqueda por esmalte del campo. Esta funcionalidad cubre lo definido en la
-\hyperref[sec:hu1]{HU1}: permite localizar los escudos cuyo campo presenta un esmalte determinado.
+\hyperref[sec:hu1]{HU1}: permite localizar los escudos cuyo campo presenta un esmalte determinado, y
+resolverá eventualmente la \hyperref[sec:hu2]{HU2}, al facilitar la clasificación y el filtrado de escudos.
 
 Siguiendo la metodología TDD, primero escribí las pruebas unitarias que definen los criterios de
 aceptación de esta funcionalidad:
