Añade introducción a la ampliación de elementos #76

--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -302,3 +302,33 @@
   title        = {Esmaltes heráldicos tradicionales},
   howpublished = {\url{https://es.wikipedia.org/wiki/Esmalte_(her%C3%A1ldica)}}
 }
+
+@misc{coronas_wikipedia,
+  author       = {Wikimedia Commons},
+  title        = {Coronas heráldicas tradicionales},
+  howpublished = {\url{https://es.wikipedia.org/wiki/Ornamentos_exteriores_%28her%C3%A1ldica%29}}
+}
+
+@misc{mitra_wikipedia,
+  author       = {Xavigivax, Wikipedia},
+  title        = {Mitra heráldica},
+  howpublished = {\url{https://es.m.wikipedia.org/wiki/Archivo:Mitra_her%C3%A1ldica.svg}}
+}
+
+@misc{yelmo_wikipedia,
+  author       = {Zigeuner, Wikipedia},
+  title        = {Yelmo heráldico},
+  howpublished = {\url{https://commons.wikimedia.org/wiki/File:Meuble_h%C3%A9raldique_Heaume_comte.svg}}
+}
+
+@misc{leon_wikipedia,
+  author       = {VARGUX, Wikipedia},
+  title        = {León rampante heráldico},
+  howpublished = {\url{https://es.wikipedia.org/wiki/Le%C3%B3n_%28her%C3%A1ldica%29}}
+}
+
+@misc{castillo_wikipedia,
+  author       = {Xavigivax, Wikipedia},
+  title        = {Castillo heráldico},
+  howpublished = {\url{https://es.wikipedia.org/wiki/Castillo_%28her%C3%A1ldica%29}}
+}
