--- a/doc/secciones/05_implementacion.tex
+++ b/doc/secciones/05_implementacion.tex
@@ -196,3 +196,79 @@ heráldicos exactos, se ha añadido un mecanismo de normalización en la clase \
 Este mecanismo mapea términos coloquiales a sus equivalentes heráldicos canónicos. Por ejemplo,
 ``rojo'' se mapea a ``gules'' y ``azul'' a ``azur''. De este modo, si el usuario introduce un término común,
 el sistema lo normaliza automáticamente, facilitando la búsqueda.
+
+\section{Milestone 4: Ampliación del catálogo y mejoras en el filtrado}
+En el modelado inicial realizado en el M2 se limitó el dominio de los escudos a los elementos más 
+básicos: ``campo'' y ``esmalte''. Esta representación mínima permitía trabajar con un prototipo funcional, 
+pero restringía la capacidad de realizar búsquedas más complejas o de analizar atributos adicionales 
+de los escudos.
+
+En esta nueva iteración (M4), se amplía el modelo para incluir un subconjunto representativo de 
+componentes adicionales, con el objetivo de habilitar búsquedas más avanzadas y preparar la estructura 
+para futuras integraciones.
+
+Los nuevos elementos incorporados al modelo son: 
+
+\begin{itemize}
+    \item \textbf{Pieza heráldica}: Se representa como un segundo esmalte, aplicando la regla heráldica
+    de no poner metal sobre metal ni color sobre color. Esto permite buscar por color sin necesidad de
+    saber cuál es el esmalte del campo y cuál el de la pieza. En futuras iteraciones se podría ampliar
+    este concepto para incluir la forma de la pieza.
+    \item \textbf{Adorno exterior}: Se representa como un subconjunto de elementos seleccionados de la
+    heráldica real, como la corona, el yelmo o la mitra, entre otros. Cada adorno puede estar asociado
+    a una categoría interna (papal, episcopal y noble) para además de poder filtrar por adorno, se pueda
+    filtrar por categoría. Se permite que un escudo tenga cero o más adornos. Este conjunto puede ampliarse
+    en futuras iteraciones.
+
+    \begin{figure}[h!]
+    \centering
+
+    \begin{minipage}{0.3\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{figuras/coronas.png}
+        \caption{Coronas heráldicas seleccionadas \cite{coronas_wikipedia}}
+    \end{minipage}
+    \hfill
+    \begin{minipage}{0.3\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{figuras/mitra.png}
+        \caption{Mitra heráldica seleccionada \cite{mitra_wikipedia}}
+    \end{minipage}
+    \hfill
+    \begin{minipage}{0.3\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{figuras/yelmo.png}
+        \caption{Yelmo heráldico seleccionado \cite{yelmo_wikipedia}}
+    \end{minipage}
+
+    \caption{Adornos exteriores representativos en heráldica}
+    \label{fig:adornos_exteriores}
+\end{figure}
+
+
+    \item \textbf{Portador}: Se añade el portador como un atributo obligatorio del escudo, representado
+    como un string normalizado (sin minúsculas, tildes ni espacios). Esto permite identificar a quién 
+    pertenece el escudo y facilita búsquedas basadas en el portador.
+    \item \textbf{Mueble}: Se representa como un subconjunto limitado de figuras heráldicas comunes,
+    como el león, el castillo o la estrella. Cada escudo puede tener cero o más muebles, lo que facilita
+    las búsquedas. Este conjunto podrá ampliarse en futuras iteraciones.
+
+    \begin{figure}[h!]
+        \centering
+
+        \begin{minipage}{0.5\textwidth}
+            \centering
+            \includegraphics[width=0.6\textwidth]{figuras/leon.png}
+            \caption{León heráldico seleccionado \cite{leon_wikipedia}}
+        \end{minipage}
+        \hfill
+        \begin{minipage}{0.5\textwidth}
+            \centering
+            \includegraphics[width=0.6\textwidth]{figuras/castillo.png}
+            \caption{Castillo heráldico seleccionado \cite{castillo_wikipedia}}
+        \end{minipage}
+    \end{figure}
+\end{itemize}
+
+Estos elementos se han seleccionado para proporcionar una base sólida que permita 
+realizar búsquedas más detalladas y específicas, sin complicar excesivamente el modelo.
