Arregla citas en la bibliografía
No se cita Wikipedia como fuente de información, sino Wikimedia Commons como fuente de imágenes libre de derechos de autor

--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -297,38 +297,50 @@
   publisher = {Pearson}
 }
 
-@misc{esmaltes_wikipedia,
-  author       = {Wikimedia Commons},
-  title        = {Esmaltes heráldicos tradicionales},
-  howpublished = {\url{https://es.wikipedia.org/wiki/Esmalte_(her%C3%A1ldica)}}
-}
+ @misc{ wiki:esmaltes,
+   author = "Wikimedia Commons",
+   title = "File:Heraldic Shield.svg --- Wikimedia Commons{,} the free media repository",
+   year = "2022",
+   url = "\url{https://commons.wikimedia.org/w/index.php?title=File:Heraldic_Shield_Azure.svg&oldid=679335393}",
+   note = "[Online; accessed 13-October-2025]"
+ }
 
-@misc{coronas_wikipedia,
-  author       = {Wikimedia Commons},
-  title        = {Coronas heráldicas tradicionales},
-  howpublished = {\url{https://es.wikipedia.org/wiki/Ornamentos_exteriores_%28her%C3%A1ldica%29}}
-}
+ @misc{ wiki:coronas,
+   author = "Wikimedia Commons",
+   title = "File:Heraldic Crowns Spanish Heraldry.PNG --- Wikimedia Commons{,} the free media repository",
+   year = "2024",
+   url = "\url{https://commons.wikimedia.org/w/index.php?title=File:Heraldic_Crowns_Spanish_Heraldry.PNG&oldid=936954656}",
+   note = "[Online; accessed 13-October-2025]"
+ }
 
-@misc{mitra_wikipedia,
-  author       = {Xavigivax, Wikipedia},
-  title        = {Mitra heráldica},
-  howpublished = {\url{https://es.m.wikipedia.org/wiki/Archivo:Mitra_her%C3%A1ldica.svg}}
-}
+@misc{ wiki:mitra,
+   author = "Wikimedia Commons",
+   title = "File:Mitra heráldica.svg --- Wikimedia Commons{,} the free media repository",
+   year = "2023",
+   url = "\url{https://commons.wikimedia.org/w/index.php?title=File:Mitra_her%C3%A1ldica.svg&oldid=797734197}",
+   note = "[Online; accessed 13-octubre-2025]"
+ }
 
-@misc{yelmo_wikipedia,
-  author       = {Zigeuner, Wikipedia},
-  title        = {Yelmo heráldico},
-  howpublished = {\url{https://commons.wikimedia.org/wiki/File:Meuble_h%C3%A9raldique_Heaume_comte.svg}}
-}
+ @misc{ wiki:yelmo,
+   author = "Wikimedia Commons",
+   title = "File:Meuble héraldique Heaume comte.svg --- Wikimedia Commons{,} the free media repository",
+   year = "2024",
+   url = "\url{https://commons.wikimedia.org/w/index.php?title=File:Meuble_h%C3%A9raldique_Heaume_comte.svg&oldid=935947356}",
+   note = "[Online; accessed 13-October-2025]"
+ }
 
-@misc{leon_wikipedia,
-  author       = {VARGUX, Wikipedia},
-  title        = {León rampante heráldico},
-  howpublished = {\url{https://es.wikipedia.org/wiki/Le%C3%B3n_%28her%C3%A1ldica%29}}
-}
+@misc{ wiki:leon,
+   author = "Wikimedia Commons",
+   title = "File:León Rampante.svg --- Wikimedia Commons{,} the free media repository",
+   year = "2024",
+   url = "\url{https://commons.wikimedia.org/w/index.php?title=File:Le%C3%B3n_Rampante.svg&oldid=875790719}",
+   note = "[Online; accessed 13-October-2025]"
+ }
 
-@misc{castillo_wikipedia,
-  author       = {Xavigivax, Wikipedia},
-  title        = {Castillo heráldico},
-  howpublished = {\url{https://es.wikipedia.org/wiki/Castillo_%28her%C3%A1ldica%29}}
-}
+ @misc{ wiki:castillo,
+   author = "Wikimedia Commons",
+   title = "File:Castell Ulldecona 2.svg --- Wikimedia Commons{,} the free media repository",
+   year = "2024",
+   url = "\url{https://commons.wikimedia.org/w/index.php?title=File:Castell_Ulldecona_2.svg&oldid=849944405}",
+   note = "[Online; accessed 13-October-2025]"
+ }
