--- a/doc/secciones/05_implementacion.tex
+++ b/doc/secciones/05_implementacion.tex
@@ -73,7 +73,7 @@ proyecto se ha definido el siguiente lenguaje ubicuo:
     \begin{figure}[H]
         \centering
         \includegraphics[width=0.7\textwidth]{figuras/esmaltes-canonicos.png}
-        \caption{Esmaltes heráldicos canónicos \cite{esmaltes_wikipedia}.}
+        \caption{Esmaltes heráldicos canónicos \cite{wiki:esmaltes}.}
         \label{fig:esmaltes}
     \end{figure}
     \item \textbf{Pieza heráldica}: Son elementos de distinto esmalte al del campo que suelen tocar
@@ -226,19 +226,19 @@ Los nuevos elementos incorporados al modelo son:
     \begin{minipage}{0.3\textwidth}
         \centering
         \includegraphics[width=\textwidth]{figuras/coronas.png}
-        \caption{Coronas heráldicas seleccionadas \cite{coronas_wikipedia}.}
+        \caption{Coronas heráldicas seleccionadas \cite{wiki:coronas}.}
     \end{minipage}
     \hfill
     \begin{minipage}{0.3\textwidth}
         \centering
         \includegraphics[width=\textwidth]{figuras/mitra.png}
-        \caption{Mitra heráldica seleccionada \cite{mitra_wikipedia}.}
+        \caption{Mitra heráldica seleccionada \cite{wiki:mitra}.}
     \end{minipage}
     \hfill
     \begin{minipage}{0.3\textwidth}
         \centering
         \includegraphics[width=\textwidth]{figuras/yelmo.png}
-        \caption{Yelmo heráldico seleccionado \cite{yelmo_wikipedia}.}
+        \caption{Yelmo heráldico seleccionado \cite{wiki:yelmo}.}
     \end{minipage}
 
     \caption{Adornos exteriores representativos en heráldica.}
@@ -259,13 +259,13 @@ Los nuevos elementos incorporados al modelo son:
         \begin{minipage}{0.45\textwidth}
             \centering
             \includegraphics[width=0.6\textwidth]{figuras/leon.png}
-            \caption{León heráldico seleccionado \cite{leon_wikipedia}.}
+            \caption{León heráldico seleccionado \cite{wiki:leon}.}
         \end{minipage}
         \hfill
         \begin{minipage}{0.45\textwidth}
             \centering
             \includegraphics[width=0.6\textwidth]{figuras/castillo.png}
-            \caption{Castillo heráldico seleccionado \cite{castillo_wikipedia}.}
+            \caption{Castillo heráldico seleccionado \cite{wiki:castillo}.}
         \end{minipage}
     \end{figure}
 \end{itemize}
