Retira imágenes de la bibliografía
Ahora citan fuente, autor y licencia en el pie de foto

--- a/doc/secciones/05_implementacion.tex
+++ b/doc/secciones/05_implementacion.tex
@@ -73,7 +73,7 @@ proyecto se ha definido el siguiente lenguaje ubicuo:
     \begin{figure}[H]
         \centering
         \includegraphics[width=0.7\textwidth]{figuras/esmaltes-canonicos.png}
-        \caption{Esmaltes heráldicos canónicos \cite{wiki:esmaltes}.}
+        \caption{Esmaltes heráldicos canónicos. Imagen de dominio público, Wikimedia Commons.}
         \label{fig:esmaltes}
     \end{figure}
     \item \textbf{Pieza heráldica}: Son elementos de distinto esmalte al del campo que suelen tocar
@@ -226,19 +226,19 @@ Los nuevos elementos incorporados al modelo son:
     \begin{minipage}{0.3\textwidth}
         \centering
         \includegraphics[width=\textwidth]{figuras/coronas.png}
-        \caption{Coronas heráldicas seleccionadas \cite{wiki:coronas}.}
+        \caption{Coronas heráldicas seleccionadas. Imagen de dominio público, Wikimedia Commons.}
     \end{minipage}
     \hfill
     \begin{minipage}{0.3\textwidth}
         \centering
         \includegraphics[width=\textwidth]{figuras/mitra.png}
-        \caption{Mitra heráldica seleccionada \cite{wiki:mitra}.}
+        \caption{Mitra heráldica seleccionada. Imagen de Xavigivax, Wikimedia Commons, CC BY-SA 4.0.}
     \end{minipage}
     \hfill
     \begin{minipage}{0.3\textwidth}
         \centering
         \includegraphics[width=\textwidth]{figuras/yelmo.png}
-        \caption{Yelmo heráldico seleccionado \cite{wiki:yelmo}.}
+        \caption{Yelmo heráldico seleccionado. Imagen de Zigeuner, Wikimedia Commons, CC BY-SA 3.0.}
     \end{minipage}
 
     \caption{Adornos exteriores representativos en heráldica.}
@@ -259,13 +259,13 @@ Los nuevos elementos incorporados al modelo son:
         \begin{minipage}{0.45\textwidth}
             \centering
             \includegraphics[width=0.6\textwidth]{figuras/leon.png}
-            \caption{León heráldico seleccionado \cite{wiki:leon}.}
+            \caption{León heráldico seleccionado. Imagen de VARGUX, Wikimedia Commons, CC BY-SA 4.0.}
         \end{minipage}
         \hfill
         \begin{minipage}{0.45\textwidth}
             \centering
             \includegraphics[width=0.6\textwidth]{figuras/castillo.png}
-            \caption{Castillo heráldico seleccionado \cite{wiki:castillo}.}
+            \caption{Castillo heráldico seleccionado. Imagen de Xavigivax, Wikimedia Commons, CC BY-SA 3.0.}
         \end{minipage}
     \end{figure}
 \end{itemize}
