Pone en verde los tests #82
Ha sido necesario cambiar en ficha el esmalte por el campo como atributo que contiene esmalte, pieza y mueble.

--- a/doc/secciones/05_implementacion.tex
+++ b/doc/secciones/05_implementacion.tex
@@ -311,3 +311,7 @@ resultados esperados. Estas pruebas incluyen:
     \item \textbf{Filtrado por ``categoría''}: Validar que la búsqueda devuelve escudos cuya categoría de
         adorno exterior coincide con el criterio proporcionado.
 \end{itemize}
+
+Para ello primeramente se actualizó el catálogo mínimo con escudos que incluyeran
+estos nuevos atributos, y después se implementó la lógica de filtrado necesaria para que todas las
+pruebas pasaran correctamente.
