Selecciona capa de acceso a datos #85

--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -296,3 +296,11 @@
   year      = {2008},
   publisher = {Pearson}
 }
+
+@book{fowlerPatterns,
+  author    = {Martin Fowler},
+  title     = {Patterns of Enterprise Application Architecture},
+  year      = {2002},
+  publisher = {Addison-Wesley},
+  note      = {Capítulo 3: Mapping to Relational Databases}
+}
