--- a/doc/secciones/05_implementacion.tex
+++ b/doc/secciones/05_implementacion.tex
@@ -326,11 +326,11 @@ Un \textbf{Escudo} tiene un \textbf{Campo}, un \textbf{portador} y puede incluir
 El \textbf{Campo} contiene el \textbf{esmalte} principal, una posible \textbf{pieza heráldica} de distinto esmalte 
 y varios \textbf{muebles}.
 
-\paragraph{Tablas}
+\subsubsection{Tablas}
 \begin{itemize}
-    \item \textbf{campo}(\textit{id}, \textit{esmalte}, \textit{pieza\_heraldica?})
-    \item \textbf{mueble}(\textit{id}, \textit{campo\_id}, \textit{nombre})
-    \item \textbf{escudo}(\textit{id}, \textit{nombre}, \textit{portador}, \textit{adorno\_exterior?}, \textit{campo\_id})
+    \item \textbf{campo}(\textit{id}, \textit{esmalte}, \textit{pieza heraldica?})
+    \item \textbf{mueble}(\textit{id}, \textit{campo id}, \textit{nombre})
+    \item \textbf{escudo}(\textit{id}, \textit{nombre}, \textit{portador}, \textit{adorno exterior?}, \textit{campo id})
 \end{itemize}
 
 Los \textbf{muebles} se guardan como filas asociadas al campo, mientras que el \textbf{adorno exterior} 
